# embeded-linux-agent

./: .env.example  .gitattributes  .gitignore  DEPENDENCIES.txt  LICENSE  NOTICE  README.md  docker-compose.yml  quickStart.md
.github/workflows/: ci.yml
demo/icm20608-imx6ull/: .gitignore  (+1 more)
elda/: pyproject.toml
elda-api/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
elda-api/alembic/: env.py
elda-api/alembic/versions/: 001_initial.py
elda-api/app/: config.py  executor_bridge.py  logging_setup.py  main.py  secrets_loader.py  store.py  worker.py
elda-api/app/agents/: base.py  chat_agent.py  coder_agent.py  diagnostician_agent.py  extractor_agent.py  fixer_agent.py  planner_agent.py  report_agent.py
elda-api/app/db/: models.py  session.py
elda-api/app/models/: providers.py
elda-api/app/orchestrator/: pipeline.py  state_machine.py
elda-api/app/rag/: milvus_store.py  service.py
elda-api/app/storage/: minio_store.py  redis_queue.py
elda-api/app/validation/: __init__.py  schemas.py
elda-api/tests/: conftest.py  test_api_health.py  test_docker_services.py  test_external_apis.py  test_secrets_loader.py  test_support.py  test_validation.py
elda/elda/: __init__.py  __main__.py  config.py  doctor.py  driver_paths.py  secrets_loader.py  validation.py
elda/elda/cli/: main.py
elda/elda/client/: api_client.py
elda/elda/executor/: board_conflicts.py  runner.py  ws_client.py
elda/elda/ingest/: mineru.py  pdf_extract.py
elda/elda/rag/: embeddings.py  milvus_client.py
elda/tests/: test_bailian_embedding_integration.py  test_board_conflicts.py  test_command_result.py  test_config.py  test_driver_paths.py  test_pdf_extract.py
examples/: elda.yaml.example
schemas/: build_errors.json  driver_plan.json  patch_envelope.json
scripts/: bundle_docker_images.sh  bundle_download_wheels.sh  compose.sh  init_compose_env.sh  install_deps_ubuntu1604.sh  install_docker_compose.sh  install_from_bundle.sh  quickstart.sh  release_check.sh  setup_apt_mirrors_cn.sh  verify_install.sh
secrets/: api_keys.example.yaml
(+5 files in other folders)
