[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elda-api"
version = "0.3.0"
description = "ELDA cloud API — Orchestrator & Agents"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "greenlet>=3.0",
    "redis>=5.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pymilvus>=2.3.4",
    "minio>=7.2",
    "websockets>=12.0",
    "jsonschema>=4.22",
    "markdown>=3.5",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[tool.pytest.ini_options]
markers = [
    "integration: requires network and/or docker compose (skip in default CI)",
]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]
