[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elda"
version = "0.3.0"
description = "Embedded Linux Driver Agent — CLI & Local Tool Executor"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
    "gitpython>=3.1",
    "jinja2>=3.1",
    "pymilvus>=2.3.4",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
mineru = [
    "mineru[core]>=3.4.0",
]
pdf = [
    "pymupdf>=1.24.0",
]

[project.scripts]
elda = "elda.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["elda*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
markers = [
    "integration: requires network and/or docker compose (skip in default CI)",
]
